docs/3.0.x/install-expo.mdx
---
id: install-expo
title: Install in Expo project
---

import { TileLink } from "../../src/components";

#### Create a new expo project if not exist

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  To create a new expo project run the following command:
</Text>

```bash isBashStyled=false
npm install --global expo-cli
expo init my-project
cd my-project/
```

<HStack mb='4'>
<Pressable>
  {({ isHovered }) => {
    return (
      <Link
        _text={{
          _light: {
            color: "cyan.600",
          },
          _dark: {
            color: "cyan.500",
          },
          textDecorationLine: isHovered ? "underline" : "none",
          fontWeight: 'medium'
        }}
        href={"https://docs.expo.io/"}
      >
        Refer this link {" "}
      </Link>
    );
  }}
</Pressable>
<Text _dark={{ color: "coolGray.300" }}  _light={{ color: "coolGray.800" }}>for additional information on Expo and setting up an Expo starter app. </Text>
</HStack>

#### Install dependencies

<Text _dark={{ color: "coolGray.300" }} _light={{ color: "coolGray.800" }}>
  You can install the package and its peer dependencies using the package
  manager of your choice.
</Text>
<br />

<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using yarn
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
 Open a Terminal in your project's folder and run:
</Text>

```bash
yarn add native-base styled-components styled-system
```

</Box>
<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using npm
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Open a Terminal in your project's folder and run:
</Text>

```bash
npm install native-base styled-components styled-system
```

</Box>

- <Text
    _dark={{ color: "coolGray.300" }}
    _light={{ color: "coolGray.800" }}
    fontWeight="medium"
    fontSize="sm"
  >
    To install peer dependencies run following commands in your expo project:
  </Text>

```bash isBashStyled=false
expo install react-native-svg@12.1.1
```

```bash isBashStyled=false
expo install react-native-safe-area-context@3.3.2
```

<Box mt="3" />

#### Run the Hello world example

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  and put this in your pages/index.js
</Text>

```jsx
import React from "react";
import { NativeBaseProvider, Box } from "native-base";

function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```

<Box>
  <Box mt="4" mb="8">
    <HStack pl="0" ml="0" space="4">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </HStack>
    <Box mt="4" pl="0" ml="0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </Box>
  </Box>
</Box>
