docs/3.2.x/install-expo.mdx
---
id: install-expo
title: Install in Expo project
---

import { TileLink } from "../src/components";

<DocTabs
  defaultValue='new'
  values={[
  { label: 'New Project', value: 'new' },
  { label: 'Existing Project', value: 'existing' }
  ]}>
 <DocTabItem value="new">

<Box mt="3" />

#### Create a new project using Expo CLI with NativeBase template

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  Expo helps you to create universal (iOS, Android and Web) React Native apps with no build configuration.
</Text>
<br/>
<Box>
<Box 
_dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md">
Using npx
</Text>
<Text
 _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
> 
Choose your preferred template and start your development swiftly. 
Open a Terminal in your project's folder and run the following one of these command:
</Text>
<br/>
<Text
 _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
   fontWeight="bold"
>
 Plain Javascript
</Text>

```bash
npx create-expo-app my-app --template expo-template-native-base
```

<Text fontSize="sm" lineHeight="sm">
  Yey! you are all set, start editing src/pages/index.js now.
</Text>
<br />
<Text
  mt="0.5"
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="bold"
>
  With Typescript
</Text>

```bash
npx create-expo-app  my-app --template expo-template-native-base-typescript
```

<Text fontSize="sm" lineHeight="sm">
Yey! you are all set, start editing src/pages/index.tsx now.
</Text>
</Box>
</Box>

</DocTabItem>

<DocTabItem value="existing">

<Box mt="3" />

#### Create a new expo project if not exist

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  To create a new expo project run the following command:
</Text>

```bash isBashStyled=false
npx create-expo-app my-project
cd my-project/
```

<HStack mb='4'>
<Pressable>
  {({ isHovered }) => {
    return (
      <Link
        _text={{
          _light: {
            color: "cyan.600",
          },
          _dark: {
            color: "cyan.500",
          },
          textDecorationLine: isHovered ? "underline" : "none",
          fontWeight: 'medium'
        }}
        href={"https://docs.expo.io/"}
      >
        Refer this link {" "}
      </Link>
    );
  }}
</Pressable>
<Text _dark={{ color: "coolGray.300" }}  _light={{ color: "coolGray.800" }}>for additional information on Expo and setting up an Expo starter app. </Text>
</HStack>

#### Install dependencies

<Text _dark={{ color: "coolGray.300" }} _light={{ color: "coolGray.800" }}>
  You can install the package and its peer dependencies using the package
  manager of your choice.
</Text>
<br />

<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using yarn
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Open a Terminal in your project's folder and run:
</Text>

```bash
yarn add native-base
```

</Box>

<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using npm
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Open a Terminal in your project's folder and run:
</Text>

```bash
npm install native-base
```

</Box>

- <Text
    _dark={{ color: "coolGray.300" }}
    _light={{ color: "coolGray.800" }}
    fontWeight="medium"
    fontSize="sm"
  >
    To install peer dependencies run following commands in your expo project:
  </Text>

```bash isBashStyled=false
expo install react-native-svg@12.1.1
```

```bash isBashStyled=false
expo install react-native-safe-area-context@3.3.2
```

<Box mt="3" />

#### Run the Hello world example

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  and put this in your pages/index.js
</Text>

```jsx
import React from "react";
import { NativeBaseProvider, Box } from "native-base";

export default function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```

</DocTabItem>
</DocTabs>
<Box>
  <Box mt="4" mb="8">
    <HStack pl="0" ml="0" space="4">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </HStack>
    <Box mt="4" pl="0" ml="0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </Box>
  </Box>
</Box>
